Criando componente heading e configurando css

--- a/chronos-pomodoro/src/components/Heading.module.css
+++ b/chronos-pomodoro/src/components/Heading.module.css
@@ -1,4 +1,6 @@
 .heading{
-    background-image: linear-gradient( blue, rgba(173, 216, 230, 0.205));
-    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.4rem;
 }
