--- a/chronos-pomodoro/src/styles/global.css
+++ b/chronos-pomodoro/src/styles/global.css
@@ -1,10 +1,15 @@
-body{
-    background-color: var(--primary);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
+*{
+    margin:0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
 }
 
-h1{
-    color: white;
-    text-align: center;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem; /* 16px */
+    background-color: var(--gray-900);
+    color:var(--text-default);
 }
