Estilizando componente DefaultInput

--- a/chronos-pomodoro/src/styles/theme.css
+++ b/chronos-pomodoro/src/styles/theme.css
@@ -30,7 +30,7 @@
     --text-over-info:#0a0f1a;
 
     --text-default:#e6e9f0;
-    --text-muted:#44b3cc;
+    --text-muted:#aab3cc;
 
     --disabled:#555f7d;
     --text-disabled:#aab3cc;
